# bigquery-storage

./: Cargo.toml  README.md  build.rs
examples/: write.rs
src/: client.rs  lib.rs  read.rs  write.rs
src/google/: google.cloud.bigquery.storage.v1.rs
