[package]
name = "bigquery-storage"
version = "0.1.2"
authors = ["damien <damien@openquery.io>"]
description = "A small wrapper around the Google BigQuery Storage API"
keywords = ["google", "bigquery", "storage"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/openquery-io/bigquery-storage"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["arrow"]

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
rustls = { version = "0.23.10" }

[dependencies]
futures = "0.3"
tonic = { version = "0.11.0", features = ["transport", "tls", "tls-roots"] }
prost = "0.12.6"
prost-types = "0.12.6"

yup-oauth2 = { version = "10.0" }
hyper = { version = "1.3" }
hyper-util = { version = "0.1" }

arrow = { version = "52.0", optional = true }
tokio-stream = "0.1.15"
